# villiamr-game

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Engine.cpp  Engine.hpp  graphicsBase.cpp  graphicsBase.hpp  magic.hpp  magicConstants.hpp  main.cpp  movegen.cpp  movegen.hpp  position.cpp  position.hpp  types.cpp  types.hpp  zobrist.cpp  zobrist.hpp
